--- a/Components/Nav/Nav.css
+++ b/Components/Nav/Nav.css
@@ -1,23 +1,62 @@
 .Nav_items {
-    height: 70px;
-    background-color: rgba(255, 255, 255, 0.499);
-    color: black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed; 
-    top: 0; 
-    width: 100%;
-    cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-    
+  height: 70px;
+  background-color: rgba(255, 255, 255, 0.499);
+  z-index: 999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  cursor: pointer;
 }
-.Allnavitems{
-    width: 70%;
-    display: flex;
-    justify-content: space-around;
+.Nav_items span {
+  padding: 20px;
+}
 
+.Allnavitems {
+  width: 70%;
+  display: flex;
+  justify-content: space-around;
+ 
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
+}
+
+.Gene_Cart_len {
+  width: 100vw;
+}
+.Gene_Cart_len h1 {
+  margin-top: 70px;
+  font-size: 60px;
+  height: 160px;
+  display: flex;
+  align-items: center;
+  color: rgb(0, 0, 0);
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.408);
+  width: 100vw;
+  position: relative;
+}
+
+.cart_page_cart {
+  border: 2px solid black;
+  width: 120px;
+  left: 80px;
+  margin-right: 50px;
+  padding: 12px;
+  border-radius: 8px;
+  font-size: large;
+  color: black;
+  background-color: lightgreen;
+}
+.cart_page_cart span {
+  color: red;
+  font-size: 25px;
+}
+
+.cart_page_cart:hover {
+  color: blueviolet;
+  background-color: cadetblue;
 }
